--- a/cb_maintenance_project/views/maintenance_request.xml
+++ b/cb_maintenance_project/views/maintenance_request.xml
@@ -46,6 +46,7 @@
             </button>
             <field name="priority" position="after">
                 <field name="cost" widget="monetary" options="{'currency_field': 'currency_id'}"/>
+                <field name="real_cost" widget="monetary" options="{'currency_field': 'currency_id'}"/>
             </field>
         </field>
     </record>
