--- a/maintenance_location/views/maintenance_request.xml
+++ b/maintenance_location/views/maintenance_request.xml
@@ -42,7 +42,7 @@
         <field name="model">maintenance.request</field>
         <field name="inherit_id" ref="maintenance.hr_equipment_request_view_kanban"/>
         <field name="arch" type="xml">
-            <span name="technician_user_id" position="after">
+            <span name="owner_user_id" position="after">
                 <span name="location_id" t-if="record.location_id.raw_value">Location : <field name="location_id"/><br/></span>
             </span>
         </field>
