[12.0][MIG] cb_maintenance repo

--- a/maintenance_request_duplicated/views/maintenance_request.xml
+++ b/maintenance_request_duplicated/views/maintenance_request.xml
@@ -23,7 +23,7 @@
                         <field name="name"/>
                         <field name="request_date"/>
                         <field name="owner_user_id"/>
-                        <field name="technician_user_id"/>
+                        <field name="user_id"/>
                         <field name="stage_id"/>
                         <button name="deduplicate" type="object" icon="fa-trash" class='oe_edit_only oe_inline oe_stat_button' string="Deduplicate"/>
                     </tree>
