--- a/cb_maintenance/views/maintenance_request.xml
+++ b/cb_maintenance/views/maintenance_request.xml
@@ -90,6 +90,10 @@
                 <attribute name="invisible">1</attribute>
             </field>
 
+            <field name="company_id" position="attributes">
+                <attribute name="invisible">1</attribute>
+            </field>
+
             <field name="description" position="after">
                 <group>
                     <group string="Description">
