--- a/maintenance_request_duplicated/views/maintenance_request.xml
+++ b/maintenance_request_duplicated/views/maintenance_request.xml
@@ -12,7 +12,7 @@
             <button name="archive_equipment_request" position="before">
                 <button string="Mark as Duplicated" name="%(maintenance_request_duplicated.wizard_request_duplicated_act_window)d"
                         type="action" groups="maintenance.group_equipment_manager"
-                        attrs="{'invisible': ['|', ('duplicated_parent_id', '!=', False), ('is_project', '=', True)]}"/>
+                        attrs="{'invisible': [('duplicated_parent_id', '!=', False)]}"/>
             </button>
             <field name="owner_user_id" position="before">
                 <field name="duplicated_parent_id" attrs="{'invisible': [('duplicated_parent_id', '=', False)]}"/>
