[12.0][FIX] fix base_custom_info in cb_maintenance

--- a/cb_maintenance_report/report/maintenance_request_report.xml
+++ b/cb_maintenance_report/report/maintenance_request_report.xml
@@ -70,6 +70,16 @@
                                         <span t-field="record.priority"/><br/><br/>
                                     </div>
                                 </div>
+
+                                <div style="font-size: 12px;">
+                                    <t t-if="record.custom_info_template_id">
+                                        <t t-foreach="record.custom_info_ids" t-as="info_line">
+                                            <b t-field="info_line.name"/><b>:</b>
+                                            <span t-field="info_line.value"/><br/><br/>
+                                        </t>
+                                    </t>
+                                </div>
+
                                 <t t-if="record.description"><h4><strong>Description</strong></h4></t>
                                 <t t-if="record.description"><p style="font-size: 12px;" t-field="record.description"/></t>
 
