[12.0][FIX] fix base_custom_info in cb_maintenance

--- a/cb_maintenance/views/maintenance_equipment_category.xml
+++ b/cb_maintenance/views/maintenance_equipment_category.xml
@@ -20,6 +20,7 @@
                 <field name="selectable"/>
                 <field name="requires_equipment"/>
                 <field name="requires_location"/>
+                <field name="custom_info_template_id"/>
             </field>
             <group name="group_alias" position="attributes">
                 <attribute name="invisible">1</attribute>
