--- a/maintenance_request_custom_info/views/maintenance_request.xml
+++ b/maintenance_request_custom_info/views/maintenance_request.xml
@@ -9,11 +9,11 @@
         <field name="model">maintenance.request</field>
         <field name="inherit_id" ref="maintenance.hr_equipment_request_view_form"/>
         <field name="arch" type="xml">
-            <field name="maintenance_type" position="after">
+            <field name="maintenance_type" position="before">
                 <field name="custom_info_template_id" options='{"no_create": True, "no_open": True}'/>
             </field>
 
-            <xpath expr="//field[@name='maintenance_type']/../.." position="before">
+            <xpath expr="//field[@name='maintenance_type']/../.." position="after">
                 <group>
                     <field name="custom_info_ids" colspan="4" nolabel="1" mode="custom_info" attrs="{'invisible': [('custom_info_template_id', '=', False)]}"/>
                 </group>
