--- a/cb_maintenance_report/report/maintenance_request_report.xml
+++ b/cb_maintenance_report/report/maintenance_request_report.xml
@@ -13,100 +13,98 @@
 
         <template id="maintenance_request_template">
             <t t-call="web.internal_layout">
-                <t t-foreach="docs" t-as="record">
-                    <div class="page">
-                        <div class="row">
-                            <div class="col-10">
-                                <h4><strong t-field="record.code"/></h4>
-                                <h3>
-                                    <i class="fa fa-home" t-if="record.maintenance_type == 'preventive' and not record.is_project"/>
-                                    <i class="fa fa-tools" t-if="record.maintenance_type == 'corrective' and not record.is_project"/>
-                                    <i class="fa fa-project-diagram" t-if="record.is_project"/>
-                                    <strong t-field="record.name"/>
-                                </h3>
+                <div class="page">
+                    <div class="row">
+                        <div class="col-10">
+                            <h4><strong t-field="doc.code"/></h4>
+                            <h3>
+                                <i class="fa fa-home" t-if="doc.maintenance_type == 'preventive' and not doc.is_project"/>
+                                <i class="fa fa-tools" t-if="doc.maintenance_type == 'corrective' and not doc.is_project"/>
+                                <i class="fa fa-project-diagram" t-if="doc.is_project"/>
+                                <strong t-field="doc.name"/>
+                            </h3>
+                        </div>
+                        <div class="col-2">
+                            <span class="label label-primary pull-right">
+                                <span style="font-size: 12px;margin-top: 6px" t-field="doc.stage_id"/>
+                            </span>
+                        </div>
+                    </div>
+                    <br/>
+                    <h4><strong>Technical Information</strong></h4>
+                    <h4>
+                        <div class="row" style="font-size: 12px;">
+                            <div class="col-6">
+                                <b>Requested By:</b>
+                                <span t-field="doc.owner_user_id"/><br/><br/>
+                                <b>Request Date:</b>
+                                <span t-field="doc.create_date"/><br/><br/>
+                                <b>Location:</b>
+                                <span t-field="doc.location_id"/><br/><br/>
+                                <b>Equipment:</b>
+                                <span t-if="doc.equipment_id" t-field="doc.equipment_id"/><br/><br/>
+                                <b>Category:</b>
+                                <span t-field="doc.category_id"/><br/><br/>
+                                <b>Maintenance Type:</b>
+                                <span t-if="doc.maintenance_type" t-field="doc.maintenance_type"/><br/><br/>
                             </div>
-                            <div class="col-2">
-                                <span class="label label-primary pull-right">
-                                    <span style="font-size: 12px;margin-top: 6px" t-field="record.stage_id"/>
-                                </span>
+
+                            <div class="col-6">
+                                <b>Team:</b>
+                                <span t-field="doc.maintenance_team_id"/><br/><br/>
+                                <b>Manager:</b>
+                                <span t-if="doc.manager_id" t-field="doc.manager_id"/><br/><br/>
+                                <b>Technician:</b>
+                                <span t-if="doc.technician_id" t-field="doc.technician_id"/><br/><br/>
+                                <b>Last Updated on:</b>
+                                <span t-field="doc.write_date"/><br/><br/>
+                                <b>Schedule Date:</b>
+                                <span t-field="doc.schedule_info"/><br/><br/>
+                                <b>Priority:</b>
+                                <span t-field="doc.priority"/><br/><br/>
                             </div>
                         </div>
-                        <br/>
-                        <h4><strong>Technical Information</strong></h4>
-                        <h4>
-                            <div class="row" style="font-size: 12px;">
-                                <div class="col-6">
-                                    <b>Requested By:</b>
-                                    <span t-field="record.owner_user_id"/><br/><br/>
-                                    <b>Request Date:</b>
-                                    <span t-field="record.create_date"/><br/><br/>
-                                    <b>Location:</b>
-                                    <span t-field="record.location_id"/><br/><br/>
-                                    <b>Equipment:</b>
-                                    <span t-if="record.equipment_id" t-field="record.equipment_id"/><br/><br/>
-                                    <b>Category:</b>
-                                    <span t-field="record.category_id"/><br/><br/>
-                                    <b>Maintenance Type:</b>
-                                    <span t-if="record.maintenance_type" t-field="record.maintenance_type"/><br/><br/>
-                                </div>
 
-                                <div class="col-6">
-                                    <b>Team:</b>
-                                    <span t-field="record.maintenance_team_id"/><br/><br/>
-                                    <b>Manager:</b>
-                                    <span t-if="record.manager_id" t-field="record.manager_id"/><br/><br/>
-                                    <b>Technician:</b>
-                                    <span t-if="record.technician_id" t-field="record.technician_id"/><br/><br/>
-                                    <b>Last Updated on:</b>
-                                    <span t-field="record.write_date"/><br/><br/>
-                                    <b>Schedule Date:</b>
-                                    <span t-field="record.schedule_info"/><br/><br/>
-                                    <b>Priority:</b>
-                                    <span t-field="record.priority"/><br/><br/>
-                                </div>
-                            </div>
-
-                            <div style="font-size: 12px;">
-                                <t t-if="record.custom_info_template_id">
-                                    <t t-foreach="record.custom_info_ids" t-as="info_line">
-                                        <b t-field="info_line.name"/><b>:</b>
-                                        <span t-field="info_line.value"/><br/><br/>
-                                    </t>
+                        <div style="font-size: 12px;">
+                            <t t-if="doc.custom_info_template_id">
+                                <t t-foreach="doc.custom_info_ids" t-as="info_line">
+                                    <b t-field="info_line.name"/><b>:</b>
+                                    <span t-field="info_line.value"/><br/><br/>
                                 </t>
-                            </div>
+                            </t>
+                        </div>
 
-                            <t t-if="record.description"><h4><strong>Description</strong></h4></t>
-                            <t t-if="record.description"><p style="font-size: 12px;" t-field="record.description"/></t>
+                        <t t-if="doc.description"><h4><strong>Description</strong></h4></t>
+                        <t t-if="doc.description"><p style="font-size: 12px;" t-field="doc.description"/></t>
 
-                            <h4><strong>Chatter</strong></h4>
-                            <table style="font-size: 12px;">
-                                <t t-foreach="record.message_ids" t-as="msg">
-                                    <tr>
-                                        <td style="padding-right: 1cm; font-weight:bold;">
-                                            <span t-field="msg.author_id"/><br/>
-                                            <div style="font-size:75%; padding-left: 3mm;">
-                                                (<span t-field="msg.date"/>)
-                                            </div>
-                                        </td>
-                                        <td>
-                                            <div t-if="msg.subject"><span t-field="msg.subject"/>: </div>
-                                            <div t-if="msg.message_type == 'notification'">
-                                                <span t-field="msg.subtype_id.name"/>
-                                                <t t-foreach='msg.sudo().tracking_value_ids' t-as='value'>
-                                                    <li>
-                                                        <t t-esc="value.field_desc"/>:
-                                                        <span> <t t-esc="value.new_value_char"/> </span>
-                                                    </li>
-                                                </t>
-                                            </div>
-                                            <span t-field="msg.body"/>
-                                        </td>
-                                    </tr>
-                                </t>
-                            </table>
-                        </h4>
-                    </div>
-                </t>
+                        <h4><strong>Chatter</strong></h4>
+                        <table style="font-size: 12px;">
+                            <t t-foreach="doc.message_ids" t-as="msg">
+                                <tr>
+                                    <td style="padding-right: 1cm; font-weight:bold;">
+                                        <span t-field="msg.author_id"/><br/>
+                                        <div style="font-size:75%; padding-left: 3mm;">
+                                            (<span t-field="msg.date"/>)
+                                        </div>
+                                    </td>
+                                    <td>
+                                        <div t-if="msg.subject"><span t-field="msg.subject"/>: </div>
+                                        <div t-if="msg.message_type == 'notification'">
+                                            <span t-field="msg.subtype_id.name"/>
+                                            <t t-foreach='msg.sudo().tracking_value_ids' t-as='value'>
+                                                <li>
+                                                    <t t-esc="value.field_desc"/>:
+                                                    <span> <t t-esc="value.new_value_char"/> </span>
+                                                </li>
+                                            </t>
+                                        </div>
+                                        <span t-field="msg.body"/>
+                                    </td>
+                                </tr>
+                            </t>
+                        </table>
+                    </h4>
+                </div>
             </t>
         </template>
 
